<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingLeft="30dp"
    android:paddingEnd="30dp"
    android:paddingRight="30dp"
    android:background="@drawable/gpc_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.feature.main.MainActivity">

    <Button
        style="@style/nav_button"
        android:id="@+id/button_chat"
        android:drawableStart="@drawable/ic_chat"
        android:onClick="onChatClicked"
        android:text="@string/chat_button" />

    <Button
        style="@style/nav_button"
        android:id="@+id/button_login"
        android:layout_marginVertical="24dp"
        android:drawableStart="@drawable/ic_lock"
        android:onClick="onLoginClicked"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/button_animation"
        style="@style/nav_button"
        android:drawableStart="@drawable/ic_animation"
        android:onClick="onAnimationClicked"
        android:text="@string/animation_button" />

</LinearLayout>

