<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gpc_sunset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.login.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_background"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingTop="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/input_field_text"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_field_text"
                android:textColor="@color/input_field_text"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:background="@drawable/button_blue"
            android:foreground="?selectableItemBackground"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="26dp"
            android:layout_marginVertical="24dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/login" />

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>